# 076bei-bot

./: .env.example  .gitignore  README.md  keep_alive.py  main.py  pyproject.toml
cogs/: admin.py  clean_url.py  feed.py  misc.py  ping.py  xkcd_comics.py
config/: config.json  strings.json
libs/: config.py  deploy.py  my_feed.py
setup/: requirements.txt  setup.sh
